# mats-nice-hacks

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
libraries/: matplist.hpp
libraries/cocos-headers/cocos2dx/: CCDirector.h
libraries/imgui-hook/: imgui-hook.cpp
libraries/mat-dash/include/: matdash.hpp
libraries/mat-dash/include/matdash/: boilerplate.hpp
libraries/mat-dash/src/: template-utils.hpp
src/: console.hpp  dllmain.cpp  explorer.cpp  gd.hpp  lvl-share.cpp  menu.cpp  meta.hpp  preview-mode.cpp  save-file.cpp  save-file.hpp  schema.hpp  state.cpp  state.hpp  utils.hpp
